--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^4.1.1",
     "font-awesome": "^4.7.0",
+    "lodash": "^4.17.10",
+    "prop-types": "^15.6.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "4.0.1",
+    "react-scripts": "3.4.4",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
